--- a/src/app/pages/user/user.component.html
+++ b/src/app/pages/user/user.component.html
@@ -13,7 +13,7 @@
                     <li class="nav-item">
                       <a class="nav-link active" href="#" data-toggle="tab" data-target="#tab1" translate>
                         <span class="ks-icon la la-user text-info"></span>
-                        {{'navbar.user'}}
+                        {{'auth-form.profile-image'}}
                       </a>
                     </li>
                     <!--<li class="nav-item">
